Fixed social container; it was not responsive on mobiles previously

--- a/css/main.css
+++ b/css/main.css
@@ -163,14 +163,20 @@ h1 {
     margin-bottom: 50px;
 }
 .social-container {
-    width: 400px;
+    max-width: 400px;
+    width: 80%;
     margin: 0 auto;
     margin-bottom: 40px;
 }
 #zmdi-hc-4x {
     font-size: 5em;
 }
+@media (max-width: 992px) {
+    #zmdi-hc-4x {
+        font-size: 3em;
+    }
 
+}
 
 /*Footer*/
 #footer {
